# HOS-LS

./: .coverage  .flake8  .gitignore  .mise.toml  .pre-commit-config.yaml  .refactoring-agent.yml  .scan_state.json  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  README.md  REFACTORING_GUIDE.md  SECURITY.md  check_errors.py  docker-compose.yml  fix_1.md  fix_except_unused.py  fix_f541.py  fix_f841.py  fix_f841_batch2.py  fix_mypy_errors.py  fix_w292.py  flake8_current.txt  flake8_report.txt  flake8_report_batch1.txt  hos-ls.sh  hos-ls.yaml  install.bat  install.sh  just_test.bat  nvd_update_checkpoint.json  pyproject.toml  report.html  report_resume_v2.html  requirements.txt  resume_test.html  rewrite.yml  sitecustomize.py  test_10.html  test_100.html  (+16 more)
.github/: MAINTAINERS.md  TEAM.md  action.yml
.github/workflows/: ci.yml  security-scan.yml  traffic-chart.yml
.hos-ls-cache/scan_cache/: 2c6cd8ca.json  31c38f9a.json  c83b4663.json  e063d850.json
.hos-ls/indexes/: 02b9dc5c6d30e270.json  05d72cc1f71a20b6.json  08149c4f75e9cb03.json  0a8c6491c41f6c2d.json  0bfdd34977b17cf5.json  0eb3221de8284a83.json  102149c4924aeef2.json  127ed0c8a192440a.json  129bf553bf32d08d.json  13af4ffc5f005519.json  15634e5e734b363d.json  17be9d2dc77264c6.json  1f96a0a6a22a8238.json  2363572950d6c6d7.json  26add58c4dae5862.json  2c54d20c17494469.json  2cedd3f3f33abcc1.json  2e8d74a720ec2aa2.json  3413767743efe526.json  37a78c3e9c8a1042.json  3affd71898330ac4.json  3ee367ad84021418.json  43c033a89c54256f.json  49c089f75861fe57.json  4ab2acbd29c38d48.json  4d8d5315c545ab9e.json  4f8e4eede81d192b.json  53a5f26a99cbe181.json  543c624f61800a6a.json  546cfb4898b181fd.json  55970b4d0292e418.json  5808e20cd5e2ddac.json  582cdbd07a2863d3.json  58a6fa0412d79ebd.json  59ca267b39ba2a66.json  59eae01033d53b4c.json  5ce4485af8c4d208.json  6a334ae891ca21bc.json  6a75de1c6b5094b9.json  71970eae1c47eec8.json  (+45 more)
.hos_ls/vector_store/: chroma.sqlite3
.local/coverage-7.14.0.dist-info/: RECORD
.local/pygments-2.20.0.dist-info/: RECORD
.local/pytest-9.0.3.dist-info/: RECORD
.local_python/coverage-7.14.0.dist-info/: RECORD
.local_python/pygments-2.20.0.dist-info/: RECORD
.local_python/pytest-9.0.3.dist-info/: RECORD
.trae/documents/: chat_mode_implementation_plan.md  fix-json-parsing-error.md  fix-report-generation-bug.md  readme-update-plan-v0.3.2.4.md  update_readme_plan.md  update_version_plan.md
All Vulnerabilities/: download_source_link.txt
All Vulnerabilities/sql_data/: DOWNLOAD_LINK.txt
agentflow-security-report/: report.html
config/: default.yaml  hos-ls.yaml  llm_config.yaml  prompt_config.yaml
config/examples/: enterprise-network-config.yaml
data/threat_intelligence/: threat_report_20260405.json
data/vulnerabilities/: processed_vulnerabilities.json  test_vulnerabilities.json  vulnerabilities.json
docs/: api-reference.md  benchmark.md  market-analysis.md  validations.md
docs/case-studies/: 001-spring-boot-ecommerce.md  README.md  template.md
dynamic_code/: config.yaml
dynamic_code/methods/: auth_bypass_methods.yaml  secrets_methods.yaml  sql_injection_methods.yaml  ssrf_methods.yaml
evals/: __init__.py  eval_engine.py
knowledge_base/: knowledge.json  knowledge_graph.json  version.json
nanobot-security-report/: report.html
poc-knowledge/principles/: auth_bypass.md  command_injection.md  csrf.md  deserialization.md  file_upload.md  path_traversal.md  rce.md  sensitive_data_exposure.md  sql_injection.md  ssrf.md  xss.md
poc-knowledge/techniques/: bypass_techniques.md  payload_construction.md
prompts/: severity_standards.md
prompts/templates/: adversarial_validation.jinja2  attack_chain.jinja2  code_understanding.jinja2  context_builder.jinja2  cross_file_taint.jinja2  deep_analysis.jinja2  file_prioritization.jinja2  (+4 more)
rag_knowledge_base/: knowledge.json  knowledge_graph.json  version.json
rule_validation/: run_validation.py
rules/: security_rules.json
scripts/: multi_project_test.py  pr_security_audit.py
self_learning/: attack_patterns.json  attack_records.json  payload_templates.json
src/: __init__.py  main.py  reports.py
tests/: .hos_ls_cache.json  AAA-ai-test.py  AAA-comprehensive_test.py  AAA-other-test.py  conftest.py  full_verification.py  pentest_evaluation.py  provenance.db  test_agent_system.py  test_ai_agents.py  test_final_decision_builder.py  test_hybrid_compatibility.py  test_llm_response.py  test_prompt_evolution.py  verify_poc_quality.py
vector_store/: documents.json  embedding_cache.json  embeddings.npy
web/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo
(+910 files in other folders)
